# quant

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml
Data/Metadata/: 000300.SH_ins.csv  000905.SH_ins.csv  000906.SH_ins.csv  fetch_log.csv  trade_day.csv
agent/: .env.example  PLAN.md  README.md  __init__.py  config.example.yaml  config.py  daily.py  run.sh  scheduler.py
agent/formatters/: alert_msg.py  livetrade_msg.py  papertrade_msg.py
agent/launchd/: com.user.quant.livetrade.plist  com.user.quant.papertrade.plist
agent/notifiers/: __init__.py  base.py  email.py  resend.py  telegram.py
agent/runners/: __init__.py  livetrade.py  papertrade.py
agent/tests/: send_resend_live.py  test_smoke.py
agent/utils/: __init__.py  strategy_runner.py  trading_calendar.py
docs/: change-report.md
factor_mining/f1/: factor_construct.py  main.py
factor_mining/spec_vol/: main.py
factor_mining/spec_vol/output/: summary.csv
factor_mining/week_factor/: factor_construct.py  main.py
factor_mining/week_factor/output/: summary.csv
proof/: run_proof.py
proof/output/: analysis_report.md
proof/output/tables/: experiment1_residual_purity_by_period.csv  experiment1_residual_purity_detail.csv  experiment1_residual_purity_summary.csv  experiment2_beta_drift_summary.csv  experiment2_representative_stocks.csv  experiment3_stability_by_period.csv  (+3 more)
src/quant_infra/: const.py  db_utils.py  factor_analyze.py  factor_calc.py  get_data.py  trade.py
src/quant_infra.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
视频讲义/: DUCKDB_GUIDE.md  python_sql_tutorial.md
